# madterm

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  _azure-pipelines.yml  meson.build
clock/src/: main.cpp
examples/: CMakeLists.txt
examples/clock/: CMakeLists.txt  clockConfig.cmake.in  meson.build
examples/clock/src/: main.cpp
include/madterm/: enable_formatting.hpp  terminal_sequence.hpp  types.hpp
include/madterm/cursor/: move.hpp
include/madterm/screen_buffer/: screen_buffer.hpp
include/madterm/text/: charset.hpp  effects.hpp  modification.hpp
include/madterm/window/: window.hpp
madterm/: CMakeLists.txt  madtermConfig.cmake.in
madterm/include/madterm/: enable_formatting.hpp  terminal_sequence.hpp  types.hpp
madterm/include/madterm/cursor/: mode.hpp  move.hpp
madterm/include/madterm/text/: text_effects.hpp
madterm/include/madterm/window/: window.hpp
madterm/src/: enable_formatting.cpp
madterm/src/cursor/: mode.cpp  move.cpp
madterm/src/text/: text_effects.cpp
madterm/src/window/: window.cpp
madterm/tests/: CMakeLists.txt  terminal_sequence.cpp
madterm/tests/cursor/: mode.cpp  move.cpp
madterm/tests/screen_buffer/: screen_buffer.cpp
madterm/tests/text/: text_effects.cpp
madterm/tests/window/: window.cpp
src/: enable_formatting.cpp  terminal_sequence.cpp
src/cursor/: move.cpp
src/screen_buffer/: screen_buffer.cpp
src/text/: charset.cpp  effects.cpp  modification.cpp
src/window/: window.cpp
tests/: CMakeLists.txt  meson.build  terminal_sequence.cpp  types.cpp
tests/cursor/: mode.cpp  move.cpp
tests/text/: charset.cpp  effects.cpp  modification.cpp  text_effects.cpp
